--- a/configuration/default.conf
+++ b/configuration/default.conf
@@ -1,11 +1,23 @@
 ####################################################################################################
+#                                 INCLUDE OTHER CONFIGURATION FILES                                #
+####################################################################################################
+
+## EXAMPLES:
+#include ./browser.conf
+
+
+####################################################################################################
 #                                  SYMLINK FILES & DIRECTORIES                                     #
+#                                --------------------------------                                  #
+#                                                                                                  #
+# WHERE TO PUT THE SYMLINK              SYMLINKED FILE INSIDE DOTFILES/SYMLINK/                    #
+# v v v v v v v v v v v v               v v v v v v v v v v v v v v v v v v v v                    #
 ####################################################################################################
 
 ## BASH & TERMINAL #################################################################################
-~/.bash_profile bash_profile
-~/.bashrc bashrc
-~/.tmux.conf tmux.conf
+~/.bash_profile				bash_profile
+~/.bashrc				bashrc
+~/.tmux.conf				tmux.conf
 
 
 
