Moved symlink sources to subfolder for better organization

--- a/configuration/default.conf
+++ b/configuration/default.conf
@@ -15,20 +15,26 @@
 ####################################################################################################
 
 ## BASH & TERMINAL #################################################################################
-~/.bash_profile				bash_profile
-~/.bashrc				bashrc
-~/.tmux.conf				tmux.conf
+~/.bash_profile				system/bash_profile
+~/.bashrc				system/bashrc
+~/.tmux.conf				system/tmux.conf
 
 
 
 ## LANGUAGE ########################################################################################
-~/.config/locale.conf			config/locale.conf
-~/.config/user-dirs.dirs		config/user-dirs.dirs
+~/.config/locale.conf			system/config/locale.conf
+~/.config/user-dirs.dirs		system/config/user-dirs.dirs
 
 
 
-## EDITORS #########################################################################################
-~/.nanorc				nanorc
+## OFFICE ##########################################################################################
+~/.nanorc				office/nanorc
+
+
+
+## GIT #############################################################################################
+~/.gitconfig				git/gitconfig
+~/.gitconfig.local			git/gitconfig.local
 
 
 
