--- a/symlink/system/tmux.conf
+++ b/symlink/system/tmux.conf
@@ -66,7 +66,10 @@ bind K confirm kill-server
 
 
 
-## MOUSE #######################################################################
+
+################################################################################
+##                              MOUSE CONFIGURATION                           ##
+################################################################################
 
 ## ENABLE MOUSE
 setw -g mouse on
