Moved symlink sources to subfolder for better organization

--- a/configuration/default.conf
+++ b/configuration/default.conf
@@ -14,16 +14,16 @@
 # v v v v v v v v v v v v               v v v v v v v v v v v v v v v v v v v v                    #
 ####################################################################################################
 
-## BASH & TERMINAL #################################################################################
+## SYSTEM ##########################################################################################
 ~/.bash_profile				system/bash_profile
 ~/.bashrc				system/bashrc
 ~/.tmux.conf				system/tmux.conf
 
 
 
-## LANGUAGE ########################################################################################
-~/.config/locale.conf			system/config/locale.conf
-~/.config/user-dirs.dirs		system/config/user-dirs.dirs
+## SYSTEM :: LANGUAGE ##############################################################################
+~/.config/locale.conf			system/language/locale.conf
+~/.config/user-dirs.dirs		system/language/user-dirs.dirs
 
 
 
