Create symlink to home folder

--- a/configuration/default.conf
+++ b/configuration/default.conf
@@ -29,12 +29,19 @@
 
 ## OFFICE ##########################################################################################
 ~/.nanorc				office/nanorc
+~/.config/gedit/accels			office/gedit_accels
+~/.config/texstudio			office/texstudio
 
 
 
 ## GIT #############################################################################################
 ~/.gitconfig				git/gitconfig
 ~/.gitconfig.local			git/gitconfig.local
+
+
+
+## MULTIMEDIA ######################################################################################
+
 
 
 
