--- a/symlink/system/tmux.conf
+++ b/symlink/system/tmux.conf
@@ -29,7 +29,7 @@ set -g history-limit 30000
 
 
 
-## R: Force a reload of the config file
+## R: Force a reload of the config file. Source: tmux man page
 unbind r
 bind-key r source-file ~/.tmux.conf \; display-message "Reload source-file: done"
 
@@ -39,25 +39,13 @@ bind-key r source-file ~/.tmux.conf \; display-message "Reload source-file: done
 bind -n PageUp copy-mode -eu
 
 
+
 ## Switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-
-
-unbind +
-bind + \
-	new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \;\
-	swap-pane -s tmux-zoom.0 \;\
-	select-window -t tmux-zoom
-    
-unbind -
-bind - \
-	last-window \;\
-	swap-pane -s tmux-zoom.0 \;\
-	kill-window -t tmux-zoom
 
 
 ## Kill
