--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 #
 ################################################################################
 
-## andy
+
 dotfiles/*/ssh
 dotfiles/*/gnupg
 dotfiles/andy
 dotfiles/box
 config/andy*
-#config/box*
+config/box*
