--- a/config/bob@pc.config
+++ b/config/bob@pc.config
@@ -2,6 +2,7 @@
 #	INCLUDE OTHER CONFIGURATION FILES
 ################################################################################
 
+include						shared.config
 
 
 ################################################################################
@@ -14,5 +15,5 @@
 
 
 ## SYSTEM FILES
-~/this-file-is-a-symlink			bob/example-file
-
+~/this-file-is-a-symlink			example-file
+~/this-is-another-symlink			nested/another-example-file
