--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
-################################################################################
-#
-################################################################################
+## Prevent users from uploading private data
+dotfiles/**/ssh/
+dotfiles/**/gnupg/
 
-## Prevent users from uploading dangerous data
-dotfiles/*/ssh/
-dotfiles/*/gnupg/
-dotfiles/*/*/ssh/
-dotfiles/*/*/gnupg/
-dotfiles/*/*/*/ssh/
-dotfiles/*/*/*/gnupg/
-
-## Andy
-dotfiles/andy/
-config/andy*
