--- a/config/example@example.config
+++ b/config/example@example.config
@@ -2,7 +2,7 @@
 #	INCLUDE OTHER CONFIGURATION FILES
 ################################################################################
 
-include						shared.config
+include						example.config
 
 
 ################################################################################
@@ -16,4 +16,4 @@ include						shared.config
 
 ## SYSTEM FILES
 ~/this-file-is-a-symlink			example-file
-~/this-is-another-symlink			nested/another-example-file
+
