--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 ## Prevent users from uploading private data, this is a safety mechanism
-originals/**/ssh/*
-originals/**/gnupg/*
+dotfiles/**/ssh/*
+dotfiles/**/gnupg/*
